--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="description" content="Poca - Podcast &amp; Audio Template">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- <link rel="import" href="./header.html"> -->
 
   <!-- Title -->
   <title>Louvor Jovens 2º IEQ</title>
@@ -28,8 +27,6 @@
   </div>
 
   <!-- ***** Header Area Start ***** -->
-  <!-- <div w3-include-html="./header.html"></div> -->
-
   <header class="header-area">
       <!-- Main Header Start -->
       <div class="main-header-area">
@@ -57,9 +54,9 @@
               <div class="classynav">
                   <ul id="nav">
                   <li class="current-item"><a href="./index.html">Inicio</a></li>
-                  <li><a href="./podcast.html">Playlist</a></li>
-                  <li><a href="./about.html">Sobre nós</a></li>
-                  <li><a href="./contact.html">Contato</a></li>
+                  <li><a href="./playlist.html">Playlist</a></li>
+                  <li><a href="./sobre.html">Sobre nós</a></li>
+                  <li><a href="./contato.html">Contato</a></li>
                   </ul>
   
                   <!-- Top Search Area -->
@@ -317,25 +314,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
   <script src="js/poca.bundle.js"></script>
   <!-- Active js -->
   <script src="js/default-assets/active.js"></script>
-
-  <script src="js/personalize.js"></script>
-
-  <script>
-    includeHTML();
-  </script>
-
-  <!-- <script>
-    var link = document.querySelector('link[rel="import"]');
-    var content = link.import;
-    var el = content.querySelector('.header_page');
-    document.body.appendChild(el.cloneNode(true));
-  </script>
-
-  <script>
-    $(document).ready(function() {
-      $('#header_page').load('. /header.html');
-    });
-  </script> -->
 
 </body>
 
