--- a/playlist.html
+++ b/playlist.html
@@ -202,6 +202,10 @@
     <div class="container">
       <div class="row poca-portfolio">
 
+        <!--          -->
+        <!-- LETRA A  -->
+        <!--          -->
+        
         <!-- Single gallery Item -->
         <div class="col-12 col-md-4 single_gallery_item letra_A wow fadeInUp" data-wow-delay="0.2s">
           <!-- Welcome Music Area -->
@@ -220,6 +224,33 @@
             </div>
           </div>
         </div>
+
+        <!--          -->
+        <!-- LETRA D  -->
+        <!--          -->
+        
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-4 single_gallery_item letra_D wow fadeInUp" data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+              <!-- <img src="./img/bg-img/5.jpg" alt=""> -->
+              <iframe width="100%" height="220px" src="https://www.youtube.com/embed/lqPjxAyWZO8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="poca-music-content text-center">
+              <!-- <span class="music-published-date mb-2">December 9, 2018</span> -->
+              <h3>Digno de glória</h3>
+              <h4>Soraya Moraes</h4>
+              <div class="music-meta-data">
+                <p>By <a href="#" class="music-author">Admin</a> | <a href="#" class="music-catagory">Tutorials</a> | <a href="#" class="music-duration">00:02:56</a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!--          -->
+        <!-- LETRA P  -->
+        <!--          -->
 
         <!-- Single gallery Item -->
         <div class="col-12 col-md-4 single_gallery_item letra_P wow fadeInUp" data-wow-delay="0.2s">
