--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Poca - Podcast &amp; Audio Template">
+  <meta name="description" content="Louvor Jovens 2º IEQ Lins">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -35,7 +35,7 @@
           <nav class="classy-navbar justify-content-between" id="pocaNav">
   
               <!-- Logo -->
-              <a class="nav-brand" href="index.html"><img src="./img/core-img/logo.png" alt=""></a>
+              <a class="nav-brand" href="index.html"><img src="./img/core-img/ieq.png" alt=""></a>
   
               <!-- Navbar Toggler -->
               <div class="classy-navbar-toggler">
