--- a/playlist.html
+++ b/playlist.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Poca - Podcast &amp; Audio Template">
+  <meta name="description" content="Louvor Jovens 2º IEQ Lins">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -35,7 +35,7 @@
         <nav class="classy-navbar justify-content-between" id="pocaNav">
 
             <!-- Logo -->
-            <a class="nav-brand" href="index.html"><img src="./img/core-img/logo.png" alt=""></a>
+            <a class="nav-brand" href="index.html"><img src="./img/core-img/ieq.png" alt=""></a>
 
             <!-- Navbar Toggler -->
             <div class="classy-navbar-toggler">
@@ -53,8 +53,8 @@
             <!-- Nav Start -->
             <div class="classynav">
                 <ul id="nav">
-                <li class="current-item"><a href="./index.html">Inicio</a></li>
-                <li><a href="./playlist.html">Playlist</a></li>
+                <li><a href="./index.html">Inicio</a></li>
+                <li class="current-item"><a href="./playlist.html">Playlist</a></li>
                 <li><a href="./sobre.html">Sobre nós</a></li>
                 <li><a href="./contato.html">Contato</a></li>
                 </ul>
@@ -99,7 +99,7 @@
         <div class="col-12">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="index.html"><i class="fa fa-home"></i> Home</a></li>
+              <li class="breadcrumb-item"><a href="index.html"><i class="fa fa-home"></i> Inicio</a></li>
               <li class="breadcrumb-item active" aria-current="page">Playlist</li>
             </ol>
           </nav>
@@ -109,57 +109,8 @@
   </div>
   <!-- ***** Breadcrumb Area End ***** -->
 
-  <!-- ***** Featured Music Area Start ***** -->
-  <!-- <div class="poca-featured-music-area mt-50">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="poca-music-area box-shadow d-flex align-items-center flex-wrap border" data-animation="fadeInUp" data-delay="900ms">
-            <div class="poca-music-thumbnail">
-              <img src="./img/bg-img/4.jpg" alt="">
-            </div>
-            <div class="poca-music-content">
-              <span class="music-published-date">December 9, 2018</span>
-              <h2>Episode 203 - The Last Blockbuster</h2>
-              <div class="music-meta-data">
-                <p>By <a href="#" class="music-author">Admin</a> | <a href="#" class="music-catagory">Tutorials</a> | <a href="#" class="music-duration">00:02:56</a></p>
-              </div> -->
-              <!-- Music Player -->
-              <!-- <div class="poca-music-player">
-                <audio preload="auto" controls>
-                  <source src="audio/dummy-audio.mp3">
-                </audio>
-              </div> -->
-              <!-- Likes, Share & Download -->
-              <!-- <div class="likes-share-download d-flex align-items-center justify-content-between">
-                <a href="#"><i class="fa fa-heart" aria-hidden="true"></i> Like (29)</a>
-                <div>
-                  <a href="#" class="mr-4"><i class="fa fa-share-alt" aria-hidden="true"></i> Share(04)</a>
-                  <a href="#"><i class="fa fa-download" aria-hidden="true"></i> Download (12)</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-  <!-- ***** Featured Music Area End ***** -->
-
   <!-- ***** Latest Episodes Area Start ***** -->
   <section class="poca-latest-epiosodes section-padding-80" style="padding-top:0px;">
-    <!-- <div class="container"> -->
-      <!-- <div class="row"> -->
-        <!-- Section Heading -->
-        <!-- <div class="col-12">
-          <div class="section-heading text-center">
-            <h2>Latest Episodes</h2>
-            <div class="line"></div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
     <!-- Projects Menu -->
     <div class="container">
       <div class="poca-projects-menu mb-30 wow fadeInUp" data-wow-delay="0.3s">
@@ -168,7 +119,7 @@
           <button class="btn" data-filter=".letra_A">A</button>
           <!-- <button class="btn" data-filter=".letra_B">B</button> -->
           <!-- <button class="btn" data-filter=".letra_C">C</button> -->
-          <!-- <button class="btn" data-filter=".letra_D">D</button> -->
+          <button class="btn" data-filter=".letra_D">D</button>
           <!-- <button class="btn" data-filter=".letra_E">E</button> -->
           <!-- <button class="btn" data-filter=".letra_F">F</button> -->
           <!-- <button class="btn" data-filter=".letra_G">G</button> -->
@@ -202,9 +153,9 @@
     <div class="container">
       <div class="row poca-portfolio">
 
-        <!--          -->
-        <!-- LETRA A  -->
-        <!--          -->
+        <!--------------------------------------------------------------->
+        <!--                         LETRA A                           -->
+        <!--------------------------------------------------------------->
         
         <!-- Single gallery Item -->
         <div class="col-12 col-md-4 single_gallery_item letra_A wow fadeInUp" data-wow-delay="0.2s">
@@ -225,9 +176,9 @@
           </div>
         </div>
 
-        <!--          -->
-        <!-- LETRA D  -->
-        <!--          -->
+        <!--------------------------------------------------------------->
+        <!--                         LETRA D                           -->
+        <!--------------------------------------------------------------->
         
         <!-- Single gallery Item -->
         <div class="col-12 col-md-4 single_gallery_item letra_D wow fadeInUp" data-wow-delay="0.2s">
@@ -248,9 +199,9 @@
           </div>
         </div>
 
-        <!--          -->
-        <!-- LETRA P  -->
-        <!--          -->
+        <!--------------------------------------------------------------->
+        <!--                         LETRA P                           -->
+        <!--------------------------------------------------------------->
 
         <!-- Single gallery Item -->
         <div class="col-12 col-md-4 single_gallery_item letra_P wow fadeInUp" data-wow-delay="0.2s">
