--- a/sobre.html
+++ b/sobre.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="description" content="Poca - Podcast &amp; Audio Template">
+  <meta name="description" content="Louvor Jovens 2º IEQ Lins">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -30,89 +30,55 @@
   <header class="header-area">
     <!-- Main Header Start -->
     <div class="main-header-area">
-      <div class="classy-nav-container breakpoint-off">
+        <div class="classy-nav-container breakpoint-off">
         <!-- Classy Menu -->
         <nav class="classy-navbar justify-content-between" id="pocaNav">
 
-          <!-- Logo -->
-          <a class="nav-brand" href="index.html"><img src="./img/core-img/logo.png" alt=""></a>
+            <!-- Logo -->
+            <a class="nav-brand" href="index.html"><img src="./img/core-img/ieq.png" alt=""></a>
 
-          <!-- Navbar Toggler -->
-          <div class="classy-navbar-toggler">
+            <!-- Navbar Toggler -->
+            <div class="classy-navbar-toggler">
             <span class="navbarToggler"><span></span><span></span><span></span></span>
-          </div>
+            </div>
 
-          <!-- Menu -->
-          <div class="classy-menu">
+            <!-- Menu -->
+            <div class="classy-menu">
 
             <!-- Menu Close Button -->
             <div class="classycloseIcon">
-              <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
+                <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
             </div>
 
             <!-- Nav Start -->
             <div class="classynav">
-              <ul id="nav">
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="#">Pages</a>
-                  <ul class="dropdown">
-                    <li><a href="./index.html">- Home</a></li>
-                    <li><a href="./podcast.html">- Podcast</a></li>
-                    <li><a href="./single-podcast.html">- Single Podcast</a></li>
-                    <li><a href="./about.html">- About Us</a></li>
-                    <li><a href="./blog.html">- Blog</a></li>
-                    <li><a href="./single-blog.html">- Blog Details</a></li>
-                    <li><a href="./contact.html">- Contact</a></li>
-                    <li><a href="#">- Dropdown</a>
-                      <ul class="dropdown">
-                        <li><a href="#">- Dropdown Item</a></li>
-                        <li><a href="#">- Dropdown Item</a>
-                          <ul class="dropdown">
-                            <li><a href="#">- Even Dropdown</a></li>
-                            <li><a href="#">- Even Dropdown</a></li>
-                            <li><a href="#">- Even Dropdown</a></li>
-                            <li><a href="#">- Even Dropdown</a></li>
-                          </ul>
-                        </li>
-                        <li><a href="#">- Dropdown Item</a></li>
-                        <li><a href="#">- Dropdown Item</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li><a href="./podcast.html">Podcasts</a></li>
-                <li class="current-item"><a href="./about.html">About</a></li>
-                <li><a href="#">Blog</a>
-                  <ul class="dropdown">
-                    <li><a href="./blog.html">- Blog</a></li>
-                    <li><a href="./single-blog.html">- Blog Details</a></li>
-                  </ul>
-                </li>
-                <li><a href="./contact.html">Contact</a></li>
-              </ul>
+                <ul id="nav">
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./playlist.html">Playlist</a></li>
+                <li class="current-item"><a href="./sobre.html">Sobre nós</a></li>
+                <li><a href="./contato.html">Contato</a></li>
+                </ul>
 
-              <!-- Top Search Area -->
-              <div class="top-search-area">
+                <!-- Top Search Area -->
+                <div class="top-search-area">
                 <form action="index.html" method="post">
-                  <input type="search" name="top-search-bar" class="form-control" placeholder="Search and hit enter...">
-                  <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+                    <input type="search" name="top-search-bar" class="form-control" placeholder="Pesquisar">
+                    <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
                 </form>
-              </div>
+                </div>
 
-              <!-- Top Social Area -->
-              <div class="top-social-area">
+                <!-- Top Social Area -->
+                <div class="top-social-area">
                 <a href="#" class="fa fa-facebook" aria-hidden="true"></a>
-                <a href="#" class="fa fa-twitter" aria-hidden="true"></a>
-                <a href="#" class="fa fa-pinterest" aria-hidden="true"></a>
                 <a href="#" class="fa fa-instagram" aria-hidden="true"></a>
                 <a href="#" class="fa fa-youtube-play" aria-hidden="true"></a>
-              </div>
+                </div>
 
             </div>
             <!-- Nav End -->
-          </div>
+            </div>
         </nav>
-      </div>
+        </div>
     </div>
   </header>
   <!-- ***** Header Area End ***** -->
@@ -122,7 +88,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
-          <h2 class="title mt-70">About Us</h2>
+          <h2 class="title mt-70">Sobre Nós</h2>
         </div>
       </div>
     </div>
@@ -133,8 +99,8 @@
         <div class="col-12">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#"><i class="fa fa-home"></i> Home</a></li>
-              <li class="breadcrumb-item active" aria-current="page">About Us</li>
+              <li class="breadcrumb-item"><a href="#"><i class="fa fa-home"></i> Inicio</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Sobre Nós</li>
             </ol>
           </nav>
         </div>
