--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <nav class="classy-navbar justify-content-between" id="pocaNav">
   
               <!-- Logo -->
-              <a class="nav-brand" href="index.html"><img src="./img/core-img/ieq.png" alt=""></a>
+              <a class="nav-brand" href="index.html"><img src="./img/core-img/ieq.png" style="margin-top:10px;" alt=""></a>
   
               <!-- Navbar Toggler -->
               <div class="classy-navbar-toggler">
