--- a/playlist.html
+++ b/playlist.html
@@ -123,10 +123,10 @@
           <button class="btn" data-filter=".letra_E">E</button>
           <button class="btn" data-filter=".letra_F">F</button>
           <button class="btn" data-filter=".letra_G">G</button>
-          <button class="btn" data-filter=".letra_H">H</button>
-          <button class="btn" data-filter=".letra_I">I</button>
-          <button class="btn" data-filter=".letra_J">J</button>
-          <button class="btn" data-filter=".letra_K">K</button>
+          <!-- <button class="btn" data-filter=".letra_H">H</button> -->
+          <!-- <button class="btn" data-filter=".letra_I">I</button> -->
+          <!-- <button class="btn" data-filter=".letra_J">J</button> -->
+          <!-- <button class="btn" data-filter=".letra_K">K</button> -->
           <button class="btn" data-filter=".letra_L">L</button>
           <button class="btn" data-filter=".letra_M">M</button>
           <button class="btn" data-filter=".letra_N">N</button>
@@ -136,12 +136,12 @@
           <button class="btn" data-filter=".letra_R">R</button>
           <button class="btn" data-filter=".letra_S">S</button>
           <button class="btn" data-filter=".letra_T">T</button>
-          <button class="btn" data-filter=".letra_U">U</button>
-          <button class="btn" data-filter=".letra_V">V</button>
-          <button class="btn" data-filter=".letra_W">W</button>
-          <button class="btn" data-filter=".letra_X">X</button>
-          <button class="btn" data-filter=".letra_Y">Y</button>
-          <button class="btn" data-filter=".letra_Z">Z</button>
+          <!-- <button class="btn" data-filter=".letra_U">U</button> -->
+          <!-- <button class="btn" data-filter=".letra_V">V</button> -->
+          <!-- <button class="btn" data-filter=".letra_W">W</button> -->
+          <!-- <button class="btn" data-filter=".letra_X">X</button> -->
+          <!-- <button class="btn" data-filter=".letra_Y">Y</button> -->
+          <!-- <button class="btn" data-filter=".letra_Z">Z</button> -->
           <!-- <button class="btn" data-filter=".entre">Entrepreneurship</button> -->
           <!-- <button class="btn" data-filter=".media">Media</button>
           <button class="btn" data-filter=".tech">Tech</button>
