--- a/playlist.html
+++ b/playlist.html
@@ -128,7 +128,7 @@
     <div class="container">
       <div class="poca-projects-menu mb-30 wow fadeInUp" data-wow-delay="0.3s">
         <div class="text-center portfolio-menu">
-          <button class="btn active" data-filter="*">All</button>
+          <!-- <button class="btn active" data-filter="*">All</button> -->
           <button class="btn" data-filter=".letra_A">A</button>
           <!-- <button class="btn" data-filter=".letra_B">B</button> -->
           <button class="btn" data-filter=".letra_C">C</button>
