--- a/playlist.html
+++ b/playlist.html
@@ -69,9 +69,9 @@
 
                 <!-- Top Social Area -->
                 <div class="top-social-area">
-                <a href="#" class="fa fa-facebook" aria-hidden="true"></a>
-                <a href="#" class="fa fa-instagram" aria-hidden="true"></a>
-                <a href="#" class="fa fa-youtube-play" aria-hidden="true"></a>
+                <a target="_blank" href="https://www.facebook.com/JuntosVamosMaisLonge2017" class="fa fa-facebook" aria-hidden="true"></a>
+                <a target="_blank" href="https://www.instagram.com/juntosvamosmaislonge" class="fa fa-instagram" aria-hidden="true"></a>
+                <a target="_blank" href="https://www.youtube.com/channel/UCXB4PYfl74P6pDZPFwWyVbg" class="fa fa-youtube-play" aria-hidden="true"></a>
                 </div>
 
             </div>
