--- a/galeria.html
+++ b/galeria.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
   <meta charset="UTF-8">
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Title -->
-  <title>Poca - Podcast &amp; Audio Template</title>
+  <title>Louvor Jovens 2º IEQ</title>
 
   <!-- Favicon -->
   <link rel="icon" href="./img/core-img/favicon.ico">
@@ -55,9 +55,9 @@
                   <ul id="nav">
                   <li><a href="./index.html">Inicio</a></li>
                   <li><a href="./playlist.html">Playlist</a></li>
-                  <li><a href="./galeria.html">Galeria</a></li>
+                  <li class="current-item"><a href="./galeria.html">Galeria</a></li>
                   <li><a href="./sobre.html">Sobre nós</a></li>
-                  <li class="current-item"><a href="./contato.html">Contato</a></li>
+                  <li><a href="./contato.html">Contato</a></li>
                   </ul>
   
                   <!-- Top Search Area -->
@@ -82,109 +82,90 @@
           </div>
       </div>
   </header>
+
   <!-- ***** Header Area End ***** -->
 
-  <!-- ***** Breadcrumb Area Start ***** -->
-  <div class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/2.jpg);">
-    <div class="container h-100">
-      <div class="row h-100 align-items-center">
-        <div class="col-12">
-          <h2 class="title mt-70">Contato</h2>
-        </div>
+<!-- ***** Breadcrumb Area Start ***** -->
+<div class="breadcumb-area bg-img bg-overlay" style="background-image: url(img/bg-img/1.jpg);">
+  <div class="container h-100">
+    <div class="row h-100 align-items-center">
+      <div class="col-12">
+        <h2 class="title mt-70">Galeria</h2>
       </div>
     </div>
   </div>
-  <div class="breadcumb--con">
+</div>
+<!-- ***** Breadcrumb Area End ***** -->
+
+  <!-- ***** Latest Episodes Area Start ***** -->
+  <section class="poca-latest-epiosodes section-padding-80">
     <div class="container">
       <div class="row">
+        <!-- Section Heading -->
         <div class="col-12">
-          <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-              <li class="breadcrumb-item"><a href="#"><i class="fa fa-home"></i> Inicio</a></li>
-              <li class="breadcrumb-item active" aria-current="page">Contato</li>
-            </ol>
-          </nav>
+          <div class="section-heading text-center">
+            <h2>Galeria</h2>
+            <div class="line"></div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- ***** Breadcrumb Area End ***** -->
 
-  <!-- ***** Contact Area Start ***** -->
-  <section class="poca-contact-area mt-50 mb-100">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="google-maps mb-100">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11956.9355465873!2d24.0768412544878!3d56.9550599906977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46eecfb0e5073ded%3A0x400cfcd68f2fe30!2z4Kaw4Ka_4KaX4Ka-LCDgprLgp43gpq_gpr7gpp_gp43gpq3gpr_gpoY!5e0!3m2!1sbn!2sbd!4v1543911160102"
-              allowfullscreen></iframe>
-          </div>
+    <!-- Projects Menu -->
+    <!-- <div class="container">
+      <div class="poca-projects-menu mb-30 wow fadeInUp" data-wow-delay="0.3s">
+        <div class="text-center portfolio-menu">
+          <button class="btn active" data-filter="*">All</button>
+          <button class="btn" data-filter=".entre">Entrepreneurship</button>
+          <button class="btn" data-filter=".media">Media</button>
+          <button class="btn" data-filter=".tech">Tech</button>
+          <button class="btn" data-filter=".tutor">Tutorials</button>
         </div>
       </div>
+    </div> -->
 
-      <div class="row">
-        <!-- Contact Information -->
-        <div class="col-12 col-md-6">
-          <div class="contact-information">
-            <div class="contact-heading mb-50">
-              <h2>Contact Info</h2>
-              <h6>We will be happy to assist you with any question</h6>
-              <p>Lorem ipsum dolor sit amet, consetetur sadipscing esed diam nonumy eirmod tempor invidunt ut labore et dolore magna. Integer vehicula mauris libero, at molestie eros imperdiet sit amet. Suspendisse mattis ante sit amet ante.</p>
+    <div class="container">
+      <div class="row poca-portfolio">
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 single_gallery_item entre wow fadeInUp" data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+              <img src="./img/bg-img/louvor1.jpg" alt="">
             </div>
-
-
-            <h5>Address: 40 Baria Sreet 133/2 NewYork City, US</h5>
-            <h5>Phone: +01-3-8888-6868</h5>
-            <h5>Email: info@colorlib.com </h5>
-            <h5>Open Hours: Mon - Fri: 8:00 AM to 6:00 PM</h5>
           </div>
         </div>
 
-        <!-- Contact Form -->
-        <div class="col-12 col-md-6">
-          <div class="contact-form">
-            <div class="contact-heading">
-              <h2>Get In Touch</h2>
-              <h5>Don't hesitate to contact us</h5>
+        <!-- Single gallery Item -->
+        <div class="col-12 col-md-6 single_gallery_item entre wow fadeInUp" data-wow-delay="0.2s">
+          <!-- Welcome Music Area -->
+          <div class="poca-music-area style-2 d-flex align-items-center flex-wrap">
+            <div class="poca-music-thumbnail">
+              <img src="./img/bg-img/louvor2.jpg" alt="">
             </div>
-            <!-- Form -->
-            <form action="#" method="post">
-              <div class="row">
-                <div class="col-12">
-                  <input type="text" name="message-name" class="form-control mb-30" placeholder="Your Name">
-                </div>
-                <div class="col-12">
-                  <input type="email" name="message-email" class="form-control mb-30" placeholder="Your Email">
-                </div>
-                <div class="col-12">
-                  <textarea name="message" class="form-control mb-30" placeholder="Your Message"></textarea>
-                </div>
-                <div class="col-12">
-                  <button type="submit" class="btn poca-btn">Send Message</button>
-                </div>
-              </div>
-            </form>
-
           </div>
         </div>
+
+
+
       </div>
     </div>
   </section>
-  <!-- ***** Contact Area End ***** -->
+  <!-- ***** Latest Episodes Area End ***** -->
 
   <!-- ***** Newsletter Area Start ***** -->
-  <section class="poca-newsletter-area bg-img bg-overlay pt-50 jarallax" style="background-image: url(img/bg-img/15.jpg);">
+  <!-- <section class="poca-newsletter-area bg-img bg-overlay pt-50 jarallax" style="background-image: url(img/bg-img/15.jpg);">
     <div class="container">
-      <div class="row align-items-center">
+      <div class="row align-items-center"> -->
         <!-- Newsletter Content -->
-        <div class="col-12 col-lg-6">
+        <!-- <div class="col-12 col-lg-6">
           <div class="newsletter-content mb-50">
             <h2>Sign Up To Newsletter</h2>
             <h6>Subscribe to receive info on our latest news and episodes</h6>
           </div>
-        </div>
+        </div> -->
         <!-- Newsletter Form -->
-        <div class="col-12 col-lg-6">
+        <!-- <div class="col-12 col-lg-6">
           <div class="newsletter-form mb-50">
             <form action="#" method="post">
               <input type="email" name="nl-email" class="form-control" placeholder="Your Email">
@@ -194,7 +175,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- ***** Newsletter Area End ***** -->
 
   <!-- ***** Footer Area Start ***** -->
