--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                   <ul id="nav">
                   <li class="current-item"><a href="./index.html">Inicio</a></li>
                   <li><a href="./playlist.html">Playlist</a></li>
+                  <li><a href="./galeria.html">Galeria</a></li>
                   <li><a href="./sobre.html">Sobre nós</a></li>
                   <li><a href="./contato.html">Contato</a></li>
                   </ul>
@@ -103,7 +104,7 @@
         <!-- Section Heading -->
         <div class="col-12">
           <div class="section-heading text-center">
-            <h2>Galeria de Fotos</h2>
+            <h2>Jovens Labate</h2>
             <div class="line"></div>
           </div>
         </div>
@@ -111,7 +112,7 @@
     </div>
 
     <!-- Projects Menu -->
-    <div class="container">
+    <!-- <div class="container">
       <div class="poca-projects-menu mb-30 wow fadeInUp" data-wow-delay="0.3s">
         <div class="text-center portfolio-menu">
           <button class="btn active" data-filter="*">All</button>
@@ -121,10 +122,11 @@
           <button class="btn" data-filter=".tutor">Tutorials</button>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="container">
       <div class="row poca-portfolio">
+        
 
       </div>
     </div>
@@ -132,18 +134,18 @@
   <!-- ***** Latest Episodes Area End ***** -->
 
   <!-- ***** Newsletter Area Start ***** -->
-  <section class="poca-newsletter-area bg-img bg-overlay pt-50 jarallax" style="background-image: url(img/bg-img/15.jpg);">
+  <!-- <section class="poca-newsletter-area bg-img bg-overlay pt-50 jarallax" style="background-image: url(img/bg-img/15.jpg);">
     <div class="container">
-      <div class="row align-items-center">
+      <div class="row align-items-center"> -->
         <!-- Newsletter Content -->
-        <div class="col-12 col-lg-6">
+        <!-- <div class="col-12 col-lg-6">
           <div class="newsletter-content mb-50">
             <h2>Sign Up To Newsletter</h2>
             <h6>Subscribe to receive info on our latest news and episodes</h6>
           </div>
-        </div>
+        </div> -->
         <!-- Newsletter Form -->
-        <div class="col-12 col-lg-6">
+        <!-- <div class="col-12 col-lg-6">
           <div class="newsletter-form mb-50">
             <form action="#" method="post">
               <input type="email" name="nl-email" class="form-control" placeholder="Your Email">
@@ -153,7 +155,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- ***** Newsletter Area End ***** -->
 
   <!-- ***** Footer Area Start ***** -->
