--- a/playlist.html
+++ b/playlist.html
@@ -28,59 +28,60 @@
 
   <!-- ***** Header Area Start ***** -->
   <header class="header-area">
-    <!-- Main Header Start -->
-    <div class="main-header-area">
-        <div class="classy-nav-container breakpoint-off">
-        <!-- Classy Menu -->
-        <nav class="classy-navbar justify-content-between" id="pocaNav">
-
-            <!-- Logo -->
-            <a class="nav-brand" href="index.html"><img src="./img/core-img/ieq.png" style="margin-top:10px;" alt=""></a>
-
-            <!-- Navbar Toggler -->
-            <div class="classy-navbar-toggler">
-            <span class="navbarToggler"><span></span><span></span><span></span></span>
-            </div>
-
-            <!-- Menu -->
-            <div class="classy-menu">
-
-            <!-- Menu Close Button -->
-            <div class="classycloseIcon">
-                <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
-            </div>
-
-            <!-- Nav Start -->
-            <div class="classynav">
-                <ul id="nav">
-                <li><a href="./index.html">Inicio</a></li>
-                <li class="current-item"><a href="./playlist.html">Playlist</a></li>
-                <li><a href="./sobre.html">Sobre nós</a></li>
-                <li><a href="./contato.html">Contato</a></li>
-                </ul>
-
-                <!-- Top Search Area -->
-                <div class="top-search-area">
-                <form action="index.html" method="post">
-                    <input type="search" name="top-search-bar" class="form-control" placeholder="Pesquisar">
-                    <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-                </form>
-                </div>
-
-                <!-- Top Social Area -->
-                <div class="top-social-area">
-                <a target="_blank" href="https://www.facebook.com/JuntosVamosMaisLonge2017" class="fa fa-facebook" aria-hidden="true"></a>
-                <a target="_blank" href="https://www.instagram.com/juntosvamosmaislonge" class="fa fa-instagram" aria-hidden="true"></a>
-                <a target="_blank" href="https://www.youtube.com/channel/UCXB4PYfl74P6pDZPFwWyVbg" class="fa fa-youtube-play" aria-hidden="true"></a>
-                </div>
-
-            </div>
-            <!-- Nav End -->
-            </div>
-        </nav>
-        </div>
-    </div>
-</header>
+      <!-- Main Header Start -->
+      <div class="main-header-area">
+          <div class="classy-nav-container breakpoint-off">
+          <!-- Classy Menu -->
+          <nav class="classy-navbar justify-content-between" id="pocaNav">
+  
+              <!-- Logo -->
+              <a class="nav-brand" href="index.html"><img src="./img/core-img/ieq.png" style="margin-top:10px;" alt=""></a>
+  
+              <!-- Navbar Toggler -->
+              <div class="classy-navbar-toggler">
+              <span class="navbarToggler"><span></span><span></span><span></span></span>
+              </div>
+  
+              <!-- Menu -->
+              <div class="classy-menu">
+  
+              <!-- Menu Close Button -->
+              <div class="classycloseIcon">
+                  <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
+              </div>
+  
+              <!-- Nav Start -->
+              <div class="classynav">
+                  <ul id="nav">
+                  <li><a href="./index.html">Inicio</a></li>
+                  <li class="current-item"><a href="./playlist.html">Playlist</a></li>
+                  <li><a href="./galeria.html">Galeria</a></li>
+                  <li><a href="./sobre.html">Sobre nós</a></li>
+                  <li><a href="./contato.html">Contato</a></li>
+                  </ul>
+  
+                  <!-- Top Search Area -->
+                  <div class="top-search-area">
+                  <form action="index.html" method="post">
+                      <input type="search" name="top-search-bar" class="form-control" placeholder="Pesquisar">
+                      <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+                  </form>
+                  </div>
+  
+                  <!-- Top Social Area -->
+                  <div class="top-social-area">
+                  <a href="#" class="fa fa-facebook" aria-hidden="true"></a>
+                  <a href="#" class="fa fa-instagram" aria-hidden="true"></a>
+                  <a href="#" class="fa fa-youtube-play" aria-hidden="true"></a>
+                  </div>
+  
+              </div>
+              <!-- Nav End -->
+              </div>
+          </nav>
+          </div>
+      </div>
+  </header>
   <!-- ***** Header Area End ***** -->
 
   <!-- ***** Breadcrumb Area Start ***** -->
@@ -155,10 +156,6 @@
           <!-- <button class="btn" data-filter=".letra_X">X</button> -->
           <!-- <button class="btn" data-filter=".letra_Y">Y</button> -->
           <!-- <button class="btn" data-filter=".letra_Z">Z</button> -->
-          <!-- <button class="btn" data-filter=".entre">Entrepreneurship</button> -->
-          <!-- <button class="btn" data-filter=".media">Media</button>
-          <button class="btn" data-filter=".tech">Tech</button>
-          <button class="btn" data-filter=".tutor">Tutorials</button> -->
         </div>
       </div>
     </div>
@@ -1369,18 +1366,18 @@
   <!-- ***** Latest Episodes Area End ***** -->
 
   <!-- ***** Newsletter Area Start ***** -->
-  <section class="poca-newsletter-area bg-img bg-overlay pt-50 jarallax" style="background-image: url(img/bg-img/15.jpg);">
+  <!-- <section class="poca-newsletter-area bg-img bg-overlay pt-50 jarallax" style="background-image: url(img/bg-img/15.jpg);">
     <div class="container">
-      <div class="row align-items-center">
+      <div class="row align-items-center"> -->
         <!-- Newsletter Content -->
-        <div class="col-12 col-lg-6">
+        <!-- <div class="col-12 col-lg-6">
           <div class="newsletter-content mb-50">
             <h2>Sign Up To Newsletter</h2>
             <h6>Subscribe to receive info on our latest news and episodes</h6>
           </div>
-        </div>
+        </div> -->
         <!-- Newsletter Form -->
-        <div class="col-12 col-lg-6">
+        <!-- <div class="col-12 col-lg-6">
           <div class="newsletter-form mb-50">
             <form action="#" method="post">
               <input type="email" name="nl-email" class="form-control" placeholder="Your Email">
@@ -1390,39 +1387,39 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- ***** Newsletter Area End ***** -->
 
   <!-- ***** Footer Area Start ***** -->
-  <footer class="footer-area section-padding-80-0">
+  <!-- <footer class="footer-area section-padding-80-0">
     <div class="container">
-      <div class="row">
+      <div class="row"> -->
 
         <!-- Single Footer Widget -->
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="single-footer-widget mb-80">
+        <!-- <div class="col-12 col-sm-6 col-lg-3">
+          <div class="single-footer-widget mb-80"> -->
             <!-- Widget Title -->
-            <h4 class="widget-title">About Us</h4>
+            <!-- <h4 class="widget-title">About Us</h4>
 
             <p>It is a long established fact that a reader will be distracted by the readable content.</p>
             <div class="copywrite-content">
-              <p>&copy; 
+              <p>&copy;  -->
 
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-            </div>
+            <!-- </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Single Footer Widget -->
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="single-footer-widget mb-80">
+        <!-- <div class="col-12 col-sm-6 col-lg-3">
+          <div class="single-footer-widget mb-80"> -->
             <!-- Widget Title -->
-            <h4 class="widget-title">Categories</h4>
+            <!-- <h4 class="widget-title">Categories</h4> -->
 
             <!-- Catagories Nav -->
-            <nav>
+            <!-- <nav>
               <ul class="catagories-nav">
                 <li><a href="#">Entrepreneurship</a></li>
                 <li><a href="#">Media</a></li>
@@ -1431,42 +1428,42 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
               </ul>
             </nav>
           </div>
-        </div>
+        </div> -->
 
         <!-- Single Footer Widget -->
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="single-footer-widget mb-80">
-            <!-- Widget Title -->
-            <h4 class="widget-title">Lastest Episodes</h4>
+        <!-- <div class="col-12 col-sm-6 col-lg-3">
+          <div class="single-footer-widget mb-80"> -->
+        <!-- Widget Title -->
+            <!-- <h4 class="widget-title">Lastest Episodes</h4> -->
 
             <!-- Single Latest Episodes -->
-            <div class="single-latest-episodes">
+            <!-- <div class="single-latest-episodes">
               <p class="episodes-date">December 9, 2018</p>
               <a href="#" class="episodes-title">Episode 205 - See Ya In Three!</a>
-            </div>
+            </div> -->
             <!-- Single Latest Episodes -->
-            <div class="single-latest-episodes">
+            <!-- <div class="single-latest-episodes">
               <p class="episodes-date">December 8, 2018</p>
               <a href="#" class="episodes-title">Episode 204 - See Ya In Two!</a>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Single Footer Widget -->
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="single-footer-widget mb-80">
+        <!-- <div class="col-12 col-sm-6 col-lg-3">
+          <div class="single-footer-widget mb-80"> -->
             <!-- Widget Title -->
-            <h4 class="widget-title">Follow Us</h4>
+            <!-- <h4 class="widget-title">Follow Us</h4> -->
             <!-- Social Info -->
-            <div class="footer-social-info">
+            <!-- <div class="footer-social-info">
               <a href="#" class="facebook" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a>
               <a href="#" class="twitter" data-toggle="tooltip" data-placement="top" title="Twitter"><i class="fa fa-twitter"></i></a>
               <a href="#" class="pinterest" data-toggle="tooltip" data-placement="top" title="Pinterest"><i class="fa fa-pinterest"></i></a>
               <a href="#" class="instagram" data-toggle="tooltip" data-placement="top" title="Instagram"><i class="fa fa-instagram"></i></a>
               <a href="#" class="youtube" data-toggle="tooltip" data-placement="top" title="YouTube"><i class="fa fa-youtube-play"></i></a>
-            </div>
+            </div> -->
             <!-- App Download Button -->
-            <div class="app-download-button mt-30">
+            <!-- <div class="app-download-button mt-30">
               <a href="#"><img src="./img/core-img/app-store.png" alt=""></a>
               <a href="#"><img src="./img/core-img/google-play.png" alt=""></a>
             </div>
@@ -1475,7 +1472,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
       </div>
     </div>
-  </footer>
+  </footer> -->
   <!-- ***** Footer Area End ***** -->
 
   <!-- ******* All JS ******* -->
