--- a/sobre.html
+++ b/sobre.html
@@ -28,58 +28,59 @@
 
   <!-- ***** Header Area Start ***** -->
   <header class="header-area">
-    <!-- Main Header Start -->
-    <div class="main-header-area">
-        <div class="classy-nav-container breakpoint-off">
-        <!-- Classy Menu -->
-        <nav class="classy-navbar justify-content-between" id="pocaNav">
-
-            <!-- Logo -->
-            <a class="nav-brand" href="index.html"><img src="./img/core-img/ieq.png" style="margin-top:10px;" alt=""></a>
-
-            <!-- Navbar Toggler -->
-            <div class="classy-navbar-toggler">
-            <span class="navbarToggler"><span></span><span></span><span></span></span>
-            </div>
-
-            <!-- Menu -->
-            <div class="classy-menu">
-
-            <!-- Menu Close Button -->
-            <div class="classycloseIcon">
-                <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
-            </div>
-
-            <!-- Nav Start -->
-            <div class="classynav">
-                <ul id="nav">
-                <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./playlist.html">Playlist</a></li>
-                <li class="current-item"><a href="./sobre.html">Sobre nós</a></li>
-                <li><a href="./contato.html">Contato</a></li>
-                </ul>
-
-                <!-- Top Search Area -->
-                <div class="top-search-area">
-                <form action="index.html" method="post">
-                    <input type="search" name="top-search-bar" class="form-control" placeholder="Pesquisar">
-                    <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-                </form>
-                </div>
-
-                <!-- Top Social Area -->
-                <div class="top-social-area">
-                <a href="#" class="fa fa-facebook" aria-hidden="true"></a>
-                <a href="#" class="fa fa-instagram" aria-hidden="true"></a>
-                <a href="#" class="fa fa-youtube-play" aria-hidden="true"></a>
-                </div>
-
-            </div>
-            <!-- Nav End -->
-            </div>
-        </nav>
-        </div>
-    </div>
+      <!-- Main Header Start -->
+      <div class="main-header-area">
+          <div class="classy-nav-container breakpoint-off">
+          <!-- Classy Menu -->
+          <nav class="classy-navbar justify-content-between" id="pocaNav">
+  
+              <!-- Logo -->
+              <a class="nav-brand" href="index.html"><img src="./img/core-img/ieq.png" style="margin-top:10px;" alt=""></a>
+  
+              <!-- Navbar Toggler -->
+              <div class="classy-navbar-toggler">
+              <span class="navbarToggler"><span></span><span></span><span></span></span>
+              </div>
+  
+              <!-- Menu -->
+              <div class="classy-menu">
+  
+              <!-- Menu Close Button -->
+              <div class="classycloseIcon">
+                  <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
+              </div>
+  
+              <!-- Nav Start -->
+              <div class="classynav">
+                  <ul id="nav">
+                  <li><a href="./index.html">Inicio</a></li>
+                  <li><a href="./playlist.html">Playlist</a></li>
+                  <li><a href="./galeria.html">Galeria</a></li>
+                  <li class="current-item"><a href="./sobre.html">Sobre nós</a></li>
+                  <li><a href="./contato.html">Contato</a></li>
+                  </ul>
+  
+                  <!-- Top Search Area -->
+                  <div class="top-search-area">
+                  <form action="index.html" method="post">
+                      <input type="search" name="top-search-bar" class="form-control" placeholder="Pesquisar">
+                      <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+                  </form>
+                  </div>
+  
+                  <!-- Top Social Area -->
+                  <div class="top-social-area">
+                  <a href="#" class="fa fa-facebook" aria-hidden="true"></a>
+                  <a href="#" class="fa fa-instagram" aria-hidden="true"></a>
+                  <a href="#" class="fa fa-youtube-play" aria-hidden="true"></a>
+                  </div>
+  
+              </div>
+              <!-- Nav End -->
+              </div>
+          </nav>
+          </div>
+      </div>
   </header>
   <!-- ***** Header Area End ***** -->
 
