--- a/index.html
+++ b/index.html
@@ -61,19 +61,14 @@
                   </ul>
   
                   <!-- Top Search Area -->
-                  <div class="top-search-area">
-                  <form action="index.html" method="post">
-                      <input type="search" name="top-search-bar" class="form-control" placeholder="Pesquisar">
-                      <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-                  </form>
-                  </div>
+                  <div class="top-search-area" style="margin: 0 20px; padding-right: 0px;"></div>
   
                   <!-- Top Social Area -->
-                  <div class="top-social-area">
+                  <!-- <div class="top-social-area">
                   <a href="#" class="fa fa-facebook" aria-hidden="true"></a>
                   <a href="#" class="fa fa-instagram" aria-hidden="true"></a>
                   <a href="#" class="fa fa-youtube-play" aria-hidden="true"></a>
-                  </div>
+                  </div> -->
   
               </div>
               <!-- Nav End -->
@@ -82,7 +77,6 @@
           </div>
       </div>
   </header>
-
   <!-- ***** Header Area End ***** -->
 
 <!-- ***** Breadcrumb Area Start ***** -->
@@ -98,10 +92,10 @@
 <!-- ***** Breadcrumb Area End ***** -->
 
   <!-- ***** Latest Episodes Area Start ***** -->
-  <section class="poca-latest-epiosodes section-padding-80">
-    <div class="container">
+  <section class="poca-latest-epiosodes">
+    <!-- <div class="container">
       <div class="row">
-        <!-- Section Heading -->
+        Section Heading
         <div class="col-12">
           <div class="section-heading text-center">
             <h2>Jovens Labate</h2>
@@ -109,7 +103,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Projects Menu -->
     <!-- <div class="container">
