--- a/playlist.html
+++ b/playlist.html
@@ -61,19 +61,14 @@
                   </ul>
   
                   <!-- Top Search Area -->
-                  <div class="top-search-area">
-                  <form action="index.html" method="post">
-                      <input type="search" name="top-search-bar" class="form-control" placeholder="Pesquisar">
-                      <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-                  </form>
-                  </div>
+                  <div class="top-search-area" style="margin: 0 20px; padding-right: 0px;"></div>
   
                   <!-- Top Social Area -->
-                  <div class="top-social-area">
+                  <!-- <div class="top-social-area">
                   <a href="#" class="fa fa-facebook" aria-hidden="true"></a>
                   <a href="#" class="fa fa-instagram" aria-hidden="true"></a>
                   <a href="#" class="fa fa-youtube-play" aria-hidden="true"></a>
-                  </div>
+                  </div> -->
   
               </div>
               <!-- Nav End -->
@@ -111,12 +106,12 @@
   <!-- ***** Breadcrumb Area End ***** -->
   
   <!-- ***** Latest Episodes Area Start ***** -->
-  <section class="poca-latest-epiosodes" style="padding-top:0px;">
+  <section class="poca-latest-epiosodes">
       <!-- Categoria Menu -->
       <div class="container">
           <div class="poca-projects-menu mb-30 wow fadeInUp" data-wow-delay="0.3s">
             <div class="text-center portfolio-menu">
-              <button class="btn active" data-filter="*">All</button>
+              <button class="btn active" data-filter="*">Todas as Musicas</button>
               <button class="btn" data-filter=".celebracao">Adoração</button>
               <button class="btn" data-filter=".adoracao">Celebração</button>
             </div>
@@ -1391,7 +1386,7 @@
   <!-- ***** Newsletter Area End ***** -->
 
   <!-- ***** Footer Area Start ***** -->
-  <footer class="footer-area section-padding-80-0">
+  <footer class="footer-area" style="padding-top:30px;">
     
     <div class="section-heading text-center">
       <div class="line" style="width:90%; height:2px;"></div>
@@ -1404,7 +1399,7 @@
         <div class="col-12 col-sm-6 col-lg-3">
           <div class="single-footer-widget mb-80">
             <!-- Widget Title -->
-            <h4 class="widget-title">About Us</h4>
+            <h4 class="widget-title">Sobre</h4>
 
             <p>It is a long established fact that a reader will be distracted by the readable content.</p>
             
@@ -1415,7 +1410,7 @@
         <div class="col-12 col-sm-6 col-lg-3">
           <div class="single-footer-widget mb-80">
             <!-- Widget Title -->
-            <h4 class="widget-title">Categories</h4>
+            <h4 class="widget-title">Categorias</h4>
 
             <!-- Catagories Nav -->
             <nav>
@@ -1452,7 +1447,7 @@
         <div class="col-12 col-sm-6 col-lg-3">
           <div class="single-footer-widget mb-80">
             <!-- Widget Title -->
-            <h4 class="widget-title">Follow Us</h4>
+            <h4 class="widget-title">Siga-nos</h4>
             <!-- Social Info -->
             <div class="footer-social-info">
               <a href="#" class="facebook" data-toggle="tooltip" data-placement="top" title="Facebook"><i class="fa fa-facebook"></i></a>
@@ -1460,10 +1455,10 @@
               <a href="#" class="youtube" data-toggle="tooltip" data-placement="top" title="YouTube"><i class="fa fa-youtube-play"></i></a>
             </div>
             <!-- App Download Button -->
-            <div class="app-download-button mt-30">
+            <!-- <div class="app-download-button mt-30">
               <a href="#"><img src="./img/core-img/app-store.png" alt=""></a>
               <a href="#"><img src="./img/core-img/google-play.png" alt=""></a>
-            </div>
+            </div> -->
           </div>
         </div>
 
