--- a/galeria.html
+++ b/galeria.html
@@ -61,19 +61,14 @@
                   </ul>
   
                   <!-- Top Search Area -->
-                  <div class="top-search-area">
-                  <form action="index.html" method="post">
-                      <input type="search" name="top-search-bar" class="form-control" placeholder="Pesquisar">
-                      <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-                  </form>
-                  </div>
+                  <div class="top-search-area" style="margin: 0 20px; padding-right: 0px;"></div>
   
                   <!-- Top Social Area -->
-                  <div class="top-social-area">
+                  <!-- <div class="top-social-area">
                   <a href="#" class="fa fa-facebook" aria-hidden="true"></a>
                   <a href="#" class="fa fa-instagram" aria-hidden="true"></a>
                   <a href="#" class="fa fa-youtube-play" aria-hidden="true"></a>
-                  </div>
+                  </div> -->
   
               </div>
               <!-- Nav End -->
@@ -82,7 +77,6 @@
           </div>
       </div>
   </header>
-
   <!-- ***** Header Area End ***** -->
 
 <!-- ***** Breadcrumb Area Start ***** -->
@@ -95,13 +89,27 @@
     </div>
   </div>
 </div>
+<div class="breadcumb--con">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html"><i class="fa fa-home"></i> Inicio</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Galeria</li>
+          </ol>
+        </nav>
+      </div>
+    </div>
+  </div>
+</div>
 <!-- ***** Breadcrumb Area End ***** -->
 
   <!-- ***** Latest Episodes Area Start ***** -->
-  <section class="poca-latest-epiosodes section-padding-80">
-    <div class="container">
+  <section class="poca-latest-epiosodes">
+    <!-- <div class="container">
       <div class="row">
-        <!-- Section Heading -->
+        Section Heading
         <div class="col-12">
           <div class="section-heading text-center">
             <h2>Galeria</h2>
@@ -109,7 +117,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Projects Menu -->
     <!-- <div class="container">
