--- a/sobre.html
+++ b/sobre.html
@@ -61,19 +61,14 @@
                   </ul>
   
                   <!-- Top Search Area -->
-                  <div class="top-search-area">
-                  <form action="index.html" method="post">
-                      <input type="search" name="top-search-bar" class="form-control" placeholder="Pesquisar">
-                      <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-                  </form>
-                  </div>
+                  <div class="top-search-area" style="margin: 0 20px; padding-right: 0px;"></div>
   
                   <!-- Top Social Area -->
-                  <div class="top-social-area">
+                  <!-- <div class="top-social-area">
                   <a href="#" class="fa fa-facebook" aria-hidden="true"></a>
                   <a href="#" class="fa fa-instagram" aria-hidden="true"></a>
                   <a href="#" class="fa fa-youtube-play" aria-hidden="true"></a>
-                  </div>
+                  </div> -->
   
               </div>
               <!-- Nav End -->
