--- a/playlist.html
+++ b/playlist.html
@@ -172,7 +172,7 @@
                 <div class="play-button"></div> 
               </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Abraça-Me</h4>
               <h5>David Quinlan</h5>
               <div class="music-meta-data lp_font">
@@ -193,7 +193,7 @@
                 <div class="play-button"></div> 
               </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>AVIVA</h4>
               <h5>Soulfire Revolution</h5>
               <div class="music-meta-data">
@@ -214,7 +214,7 @@
                 <div class="play-button"></div> 
               </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>A Casa É Sua</h4>
               <h5>Julliany Souza + Léo Brandão</h5>
               <div class="music-meta-data">
@@ -235,7 +235,7 @@
                 <div class="play-button"></div> 
               </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>A Ele a Glória</h4>
               <h5>Diante do Trono</h5>
               <div class="music-meta-data">
@@ -256,7 +256,7 @@
                 <div class="play-button"></div> 
               </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Abra os Olhos do Coração</h4>
               <h5>David Quinlan</h5>
               <div class="music-meta-data">
@@ -277,7 +277,7 @@
                   <div class="play-button"></div> 
                 </div>
             </div>
-            <div class="poca-music-content text-center">
+            <div class="poca-music-content text-center" style="padding-top:10px;padding-bottom:0px;">
               <h4>Amor Que Enche</h4>
               <h5>Laura Souguellis</h5>
               <div class="music-meta-data">
